<resources>
    <!-- MainActivity -->
    <string name="app_name">ZEDControl</string>
    <string name="label_battery_voltage">Battery voltage:</string>
    <string name="string_voltage" translatable="false">"%1$s V"</string>
    <string name="empty_voltage">\u003Cvoltage\u003E</string>
    <string name="reinitialize">reinitialize</string>

    <!-- MainFragment -->
    <string name="button_start_up">Initialize</string>
    <string name="button_power_off">Power OFF</string>
    <string name="button_mode_drive_slow">Drive slow</string>
    <string name="button_mode_drive_maneuver">Maneuver</string>
    <string name="button_mode_drive_fast">Drive fast</string>
    <string name="button_stairs_modes">Stairs</string>
    <string name="button_mode_none">No mode</string>

    <!-- StairsControlsFragment -->
    <string name="button_drive_fixed_steering">Drive with fixed steering</string>
    <string name="button_lift_front_wheels">Lift front wheels</string>
    <string name="button_lift_rear_wheels">Lift rear wheels</string>
    <string name="button_mode_drive_fall_protection">Drive with fall protection</string>
    <string name="button_lower_front_wheels">Lower front wheels</string>
    <string name="button_lower_rear_wheels">Lower rear wheels</string>

    <!-- LockedFragment -->
    <string name="text_locked_state">Lost connection to the peripheral.\nIf \'Reconnect\' does not help, make sure the peripheral is powered and try to unplug/replug the USB cable.</string>

    <!-- EmergencyFragment -->
    <string name="text_emergency_off">Please release the emergency-off button to re-establish control.</string>

    <!-- WarningSeatPositionFragment -->
    <string name="text_check_seat_position">Check your seat position!</string>

    <!-- Error messages -->
    <string name="error_no_usb_connection">Could not establish connection to UsbDevice.</string>
    <string name="error_create_serialport">Could not create UsbSerialDevice.</string>
    <string name="error_open_serialport">Serial port could not be opened.</string>

    <!-- common -->
    <string name="back">back</string>
    <string name="error">Error</string>
    <string name="connected">Connected</string>
    <string name="reconnect">Reconnect</string>

</resources>
